--- a/app.json
+++ b/app.json
@@ -3,8 +3,6 @@
     "description": "An Bank that can easily be deployed to Heroku.",
     "addons": [ "heroku-postgresql" ],
     "env": {
-      "JAVA_OPTS": {
-        "value": "-Dspring.profiles.active=postgresql"
-      }
+      "JAVA_OPTS": {}
     }
   }
