--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-# database init, supports mysql too
-database=hsqldb
-
-spring.datasource.maxActive=10
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxIdle=5
 spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
+spring.datasource.url=${JDBC_DATABASE_URL}
+
+database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 management.endpoints.web.exposure.include=health,info,metrics
 
