--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.url=${JDBC_DATABASE_URL}
 
 database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
 
 management.endpoints.web.exposure.include=health,info,metrics
 
