--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
             "request": "launch",
             "mainClass": "${file}",
             "env": {
-                "JDBC_DATABASE_URL": "jdbc:postgresql://localhost:5432/alantorrance"
+                "JDBC_DATABASE_URL": "jdbc:postgresql://localhost:5432/alantorrance",
+                "PORT": "8080"
             }
         },
         {
@@ -20,7 +21,8 @@
             "mainClass": "com.unicorn.bank.UnicornApiApplication",
             "projectName": "unicorn-api",
             "env": {
-                "JDBC_DATABASE_URL": "jdbc:postgresql://localhost:5432/alantorrance"
+                "JDBC_DATABASE_URL": "jdbc:postgresql://localhost:5432/alantorrance",
+                "PORT": "8080"
             }
         }
     ]
